--- a/midterm.html
+++ b/midterm.html
@@ -22,6 +22,13 @@ function Value(){
     }
 }
 </script>
+<style>
+button{
+	background-color: #87CEEB;
+	 color: red;
+	 border-radius: 6px;
+}
+</style>
 <body>
 	
 
