--- a/midterm.html
+++ b/midterm.html
@@ -13,12 +13,12 @@
 <script>
 
 function Value(){
-    var A1 = document.getElementById("A").value;
-    var A2 = document.getElementById("B").value;
-    var A3 = document.getElementById("C").value;
-        for (var i = A1; i<=A2; i++){
-         var mul = i * A3; 
-            document.write(i +" " + "x" + " "+ A3 +" "+ " = " +" " +mul + "<br>"); 
+    var n1 = document.getElementById("A").value;
+    var n2 = document.getElementById("B").value;
+    var n3 = document.getElementById("C").value;
+        for (var i = n1; i<=n2; i++){
+         var mul = i * n3; 
+            document.write(i +" " + "x" + " "+ n3 +" "+ " = " +" " +mul + "<br>"); 
     }
 }
 </script>
