--- a/midterm.html
+++ b/midterm.html
@@ -3,11 +3,11 @@
 <head>
 <title>Midterm Exam</title>
 
-<input type="text" id="A" placeholder="Enter Your Multiplicand">
+<input type="text" id="A" placeholder="Enter Multiplicand">
 
-<input type="text" id="B" placeholder="Enter Your Limits">
+<input type="text" id="B" placeholder="Enter Limit">
 
-<input type="text" id="C" placeholder="Enter Your Multiplier">
+<input type="text" id="C" placeholder="Enter Multiplier">
 
 <button onclick="Value()">Click Me</button>
 <script>
@@ -27,6 +27,7 @@ button{
 	background-color: #87CEEB;
 	 color: red;
 	 border-radius: 6px;
+	 font-size: 20px;
 }
 </style>
 <body>
